# RStone

./: CMakeLists.txt  README.md
config/: distributed_gateway.yaml  distributed_store1.yaml  distributed_store2.yaml  distributed_store3.yaml  gateway.yaml  nginx.conf  pd.yaml  store1.yaml  store2.yaml  store3.yaml
docs/: ARCHITECTURE.md  CODE_READING_GUIDE.md  FUTURE_OPTIMIZATION_ROADMAP.md  IMPLEMENTATION_PLAN.md  RESUME_DESCRIPTION.md  STUDY_GUIDE.md  WEB_DASHBOARD_IMPLEMENTATION.md
include/rstone/client/: rstone_client.h
include/rstone/common/: config.h  error_code.h  logging.h  serialization.h  status.h  types.h
include/rstone/dashboard/: dashboard_server.h  status_json.h
include/rstone/gateway/: gateway_server.h  gateway_service.h  route_cache.h  rpc_gateway_client.h
include/rstone/pd/: metadata_store.h  operator.h  pd_server.h  pd_service.h  scheduler.h
include/rstone/raft/: raft_node.h  raft_storage.h  snapshot.h
include/rstone/region/: region.h
include/rstone/rpc/: rpc_client.h  rpc_codec.h  rpc_message.h  rpc_server.h  tcp_rpc.h
scripts/: benchmark.sh  build_manual.sh  consistency_check.sh  e2e_dashboard.sh  e2e_distributed_cluster.sh  e2e_distributed_recovery_cluster.sh  e2e_local_cluster.sh  e2e_recovery_cluster.sh  run_local_cluster.sh  stop_local_cluster.sh  test_manual.sh
src/: main.cpp
src/client/: rstone_client.cpp
src/common/: config.cpp  serialization.cpp
src/dashboard/: dashboard_server.cpp  status_json.cpp
src/gateway/: gateway_server.cpp  gateway_service.cpp  route_cache.cpp  rpc_gateway_client.cpp
src/pd/: metadata_store.cpp  pd_server.cpp  pd_service.cpp  scheduler.cpp
src/raft/: raft_node.cpp  raft_storage.cpp  snapshot.cpp
src/region/: region.cpp
src/rpc/: in_process_rpc.cpp  rpc_codec.cpp  tcp_rpc.cpp
src/storage/: file_kv_engine.cpp  kv_command.cpp
src/store/: distributed_region_node.cpp  distributed_store_node.cpp  multi_region_cluster.cpp  single_region_cluster.cpp  store_service.cpp
tests/unit/: client_test.cpp  config_test.cpp  file_kv_engine_test.cpp  gateway_server_test.cpp  gateway_service_test.cpp  multi_region_cluster_test.cpp  multi_region_gateway_test.cpp  pd_metadata_store_test.cpp  pd_server_test.cpp  pd_service_test.cpp  raft_node_test.cpp  raft_storage_test.cpp  rpc_codec_test.cpp  rpc_gateway_client_test.cpp  rpc_test.cpp  scheduler_test.cpp  serialization_test.cpp  single_region_cluster_test.cpp  snapshot_test.cpp  status_json_test.cpp  status_test.cpp  store_service_test.cpp  tcp_gateway_e2e_test.cpp  tcp_rpc_test.cpp  test_assert.h  test_main.cpp
tools/: rstone_cli.cpp
web/: app.js  index.html  style.css
(+8 files in other folders)
